--- a/3_eigensolvers.ipynb
+++ b/3_eigensolvers.ipynb
@@ -620,14 +620,16 @@
     }
    ],
    "source": [
+    "using LinearAlgebra\n",
+    "\n",
     "function qrortho(X::ArrayType) where {ArrayType <: AbstractArray}\n",
     "    convert(ArrayType, qr(X).Q)\n",
     "end\n",
     "qrortho(X, Y) = qrortho(X - Y * Y'X)\n",
     "\n",
-    "function rayleigh_ritz(X::Array, AX::Array, N)\n",
+    "function rayleigh_ritz(X, AX, N)\n",
     "    F = eigen(Hermitian(X'AX))\n",
-    "    F.vectors[:,1:N], F.values[1:N]\n",
+    "    F.vectors[:, 1:N], F.values[1:N]\n",
     "end\n",
     "\n",
     "function lobpcg(A, X; prec=I, tol=1e-7, maxiter=100, display_progress=false, kwargs...)\n",
@@ -1042,7 +1044,7 @@
     }
    ],
    "source": [
-    "scfres = self_consistent_field(basis; ρ, tol=1e-4, eigensolver=lobpcg);"
+    "scfres = self_consistent_field(basis; ρ, tol=1e-3, eigensolver=lobpcg);"
    ]
   },
   {
@@ -1060,9 +1062,9 @@
    "source": [
     "using CUDA\n",
     "if CUDA.has_cuda()\n",
-    "    basis  = PlaneWaveBasis(model; Ecut=15, kgrid=[1, 1, 1], architecture=DFTK.GPU(CuArray))\n",
-    "    scfres = self_consistent_field(basis; ol=1e-4, eigensolver=lobpcg,\n",
-    "                                   scf_damping_solver(1.0));\n",
+    "    basis_gpu  = PlaneWaveBasis(model; Ecut=15, kgrid=[1, 1, 1], architecture=DFTK.GPU(CuArray))\n",
+    "    scfres_gpu = self_consistent_field(basis_gpu; tol=1e-3, eigensolver=lobpcg,\n",
+    "                                       solver=scf_damping_solver(1.0));\n",
     "end"
    ]
   }
