Add link to material

--- a/3_eigensolvers.ipynb
+++ b/3_eigensolvers.ipynb
@@ -13,6 +13,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Getting these notebooks\n",
+    "\n",
+    "https://github.com/mfherbst/2024-siamla-minitutorial\n",
+    "\n",
+    "## Some advertisement\n",
+    "\n",
+    "**Workshop:** Julia for numerical problems in quantum and solid-state physics  \n",
+    "**Date:** November 26, 2024 - November 28, 2024  \n",
+    "**Location:** Lausanne, Switzerland  \n",
+    "**Website:** https://www.cecam.org/workshop-details/julia-for-numerical-problems-in-quantum-and-solid-state-physics-1355"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Some words about DFTK\n",
     "\n",
     "<img src=\"img/dftk_overview.png\" />\n",
